@@ -1,3 +1,4 @@
 EBUILD perl-IO-Compress-Zlib-2.015.ebuild 593 RMD160 9fe347d9f7c24bbb94db3729ef50af2c353f6a54 SHA1 ffc94045830f20eea7321dd97566e49b74957182 SHA256 61e7417cbff5ba28cc6f1b4853977726b525c57e3e78ed2f59eddbc1f5528403
-MISC ChangeLog 700 RMD160 cee8ef4ed06c4a0ad4720d8abac5db0be7d32bb8 SHA1 4845841093dc0538a7c1aaf7539c5c6799de996f SHA256 41034cd1eabba3c834afb34a2137a6a1a4b60ae19ada41bcf04e8a4d749182db
+EBUILD perl-IO-Compress-Zlib-2.019.ebuild 586 RMD160 b3aa041baded34e59286c32b81e836b416f78d40 SHA1 b7b18967e933d406f72045335c46baa3c899be5d SHA256 dd36fa6e3bfb485ca718f6b8b13f0cfe66853bede5e0f560a98ae1bf839505c7
+MISC ChangeLog 847 RMD160 6e79157d521a293805880f9cf87d301bc7e7e51a SHA1 94128d29fe9404c999ea8a201f8a52c47a207e59 SHA256 f4874bc4e060423f30b3944467385822f0fe5d446eb0238c01a8aa4cee5f10f2
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
